[gd_scene load_steps=7 format=3 uid="uid://cw312i87gtx8b"]

[ext_resource type="Texture2D" uid="uid://cxc0eg6ywmqi5" path="res://assets/background.png" id="1_62tqk"]
[ext_resource type="Script" uid="uid://dpylhidxtfbdr" path="res://elements/ui/hud/hud.gd" id="1_n5s42"]
[ext_resource type="Texture2D" uid="uid://c8avdj5qs1klg" path="res://assets/circle_1.png" id="2_2xxep"]
[ext_resource type="Texture2D" uid="uid://fj11q3al6t66" path="res://assets/boss_ico.png" id="3_n5s42"]
[ext_resource type="Texture2D" uid="uid://c58bpd5jbr21l" path="res://assets/apple2.png" id="4_vfghg"]
[ext_resource type="PackedScene" uid="uid://07a0dhjtdjr2" path="res://elements/ui/hud/knives_counter/knives_counter.tscn" id="6_n5s42"]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_n5s42")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_62tqk")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HomeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "< HOME"
flat = true

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "0"

[node name="StageCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_2xxep")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_2xxep")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_2xxep")
stretch_mode = 3

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("2_2xxep")
stretch_mode = 3

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/StageCounter"]
layout_mode = 2
texture = ExtResource("3_n5s42")
stretch_mode = 3

[node name="ApplesCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16
alignment = 2

[node name="ApplesLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ApplesCounter"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ApplesCounter"]
custom_minimum_size = Vector2(0, 95)
layout_mode = 2
texture = ExtResource("4_vfghg")
stretch_mode = 4

[node name="StageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "STAGE 10"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="KnivesCounter" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_n5s42")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
